room and personal chat

--- a/index.html
+++ b/index.html
@@ -17,19 +17,29 @@
   <body>
     <div class="container">
       <div class="row">
-        <div class="col-md-4">
+        <!-- <div class="col-md-4">
           <div class="card card-body bg-primary">
             <h3 class="text-while">Online Users</h3>
-            <ul class="list-group" id="users"></ul>
+              <ul class="list-group" id="users">
+              
+            </ul>
           </div>
-        </div>
+        </div> -->
 
         <div class="col-md-8">
-          <div class="card" id="chat"></div>
+          <div class="card" id="chat">
+          <div class="list-group-item active">
+              <input type="text" id="username" class="bg-primary border border-primary text-white">
+              <label for="">Room : </label>
+              <input type="text" id="room" class="bg-primary border border-primary text-white">
+          </div>
+
+          </div>
           <form id="messageForm">
             <div class="form-group">
+              
               <label for="">Enter Message</label>
-              <textarea name="" id="message" class="form-control" cols="30" rows="10"></textarea>
+              <textarea name="" id="message" class="form-control" ></textarea>
               <br>
               <input type="submit" class="btn btn-primary" value="Send Message"/>
             </div>
@@ -47,19 +57,25 @@
     <script src="/socket.io/socket.io.js"></script>
 <script>
   $(function(){
-    var socket = io.connect();
+    var socket = io.connect()
     var chat = $('#chat')
     var messageForm = $('#messageForm')
     var message = $('#message')
-
+    var username = $('#username')
+    var nameUser= $('#nameUser')
+    var userAktif = $('#users')
+    var room= $('#room')
+console.log(socket)
     messageForm.submit(function(e){
       e.preventDefault()
-      socket.emit('send message', message.val())
+      socket.emit('send message',{username:username.val(), message: message.val(),room:room.val(),})
       message.val('')
     })
     socket.on('new message',function(data){
-      chat.append(`<div class="list-group-item">${data.msg}</div>`)
+      nameUser.append(`${data.user}`)
+      chat.append(`<div class="list-group-item"><span class="btn btn-primary">${data.user}</span> ${data.msg}</div>`)
     })
+
   })
 </script>
     <!-- Option 2: jQuery, Popper.js, and Bootstrap JS
